fix partners logo alignment for mobile (SAF)

--- a/resources/css/site.css
+++ b/resources/css/site.css
@@ -533,10 +533,8 @@ h1.flexible {
   }
   
   .partners svg {
-    margin: -8rem 0 2.5rem 1.5rem;
+    margin: -8rem auto 2.5rem 1.5rem;
     position: relative;
-    left: 0;
-    align-self: start;
   }
 }
 
